deploy/ingress/ingress_kube-state-metrics.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kube-state-metrics
  namespace: kube-state-metrics
spec:
  rules:
  - host: kube-state-metrics
    http:
      paths:
      - path: /
        backend:
          serviceName: kube-state-metrics
          servicePort: 8080
